fix the horizontal scrollbar

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,9 @@
+*{
+    box-sizing:border-box;
+    overflow: hidden;
+    
+}
+img{pointer-events: none;}
 .section {
     padding: 0rem 1.5rem;
 }
